--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 
-<body class="text-gray-900 bg-gray-100 font-body overflow-hidden" id="body">
+<body class="text-gray-900 bg-gray-100 font-body" id="body">
   <!-- wrapper start -->
   <div class="pt-16 px-10 grid md:grid-cols-5 pb-20">
 
