--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
   <!-- wrapper start -->
   <div class="pt-16 px-10 grid md:grid-cols-5 pb-20">
 
-    <div class="bg-black opacity-50 z-20 top-0 bottom-0 left-0 right-0 absolute hidden" id="overlay"></div>
+    <div class="bg-black opacity-50 z-20 top-0 bottom-0 left-0 right-0 fixed hidden" id="overlay">
+    </div>
     <!-- nav start -->
     <div class="md:col-span-1">
       <nav>
@@ -45,14 +46,14 @@
               <span>Beverages</span>
             </a>
           </li>
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-              <i class="fas fa-redo-alt mr-2"></i>
-              <span>My Orders</span>
-            </a>
-          </li>
           <div class="mt-16">
             <span class="px-3 text-gray-500">Other</span>
+            <li class="my-3">
+              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
+                <i class="fas fa-redo-alt mr-2"></i>
+                <span>My Orders</span>
+              </a>
+            </li>
             <li class="my-3">
               <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
                 <i class="fas fa-sliders-h mr-2"></i>
