--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,10 @@
           <img src="images/burger.png" alt="burger" class="w-56 mx-auto mt-16 mb-8">
           <span class="font-bold text-3xl">Bacon jammer</span>
           <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-          <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
+          <span class="block text-yellow-500 mt-6 font-bold text-3xl">$ 3.50</span>
+          <span class="block mt-8">
+            <input type="text" class="rounded-lg bg-gray-200 p-2" placeholder="add a note..">
+          </span>
           <button class="rounded-lg bg-yellow-400 px-4 py-2 font-bold mt-6">Add to Order</button>
         </main>
       </div>
