--- a/public/index.html
+++ b/public/index.html
@@ -2,171 +2,126 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 
 <body class="text-gray-900 bg-gray-100 font-body" id="body">
-  <!-- wrapper start -->
-  <div class="pt-16 px-10 grid md:grid-cols-5 pb-20">
-
-    <div class="bg-black opacity-50 z-20 top-0 bottom-0 left-0 right-0 fixed hidden" id="overlay">
-    </div>
-    <!-- nav start -->
-    <div class="md:col-span-1">
-      <nav>
-        <div class="flex justify-between mb-6 px-2 md:mb-16">
-          <h1 class="font-bold uppercase">
-            <a href="#" class="text-xl"><i class="fas fa-user-ninja mr-2"></i>Food <span
-                class="text-red-700">Ninja</span></a>
-          </h1>
-          <div class="px-4 cursor-pointer md:hidden" id="open-menu">
-            <i class="fas fa-bars"></i>
-          </div>
+    <!-- hero start -->
+    <div class="top-0 left-0 right-0 p-16 bg-custom-yellow h-screen-75 rounded-b-full">
+        <div class="flex justify-center">
+            <div class="font-bold uppercase mr-auto">
+                <a href="index.html" class="text-xl"><i class="fas fa-user-ninja mr-2"></i>Food <span
+                        class="text-red-700">Ninja</span></a>
+            </div>
+            <div class="font-bold">
+                <a href="#" class="py-2 px-5">Home</a>
+                <a href="#order" class="py-2 px-5">Order</a>
+                <a href="#contact" class="py-2 px-5">Contact</a>
+            </div>
+            <div class="ml-auto font-bold">
+                <a href="#" class="py-2 px-5">Login</a>
+                <a href="#" class="font-bold rounded-full bg-gray-100 py-2 px-5 ml-2">Sign Up</a>
+            </div>
         </div>
-        <ul class="hidden md:block mr-10 mb-10" id="menu">
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-              <i class="fas fa-hamburger mr-2"></i>
-              <span>Burgers</span>
-            </a>
-          </li>
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold bg-yellow-400 block" href="#">
-              <i class="fas fa-pizza-slice mr-2"></i>
-              <span>Pizza</span>
-            </a>
-          </li>
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-              <i class="fas fa-beer mr-2"></i>
-              <span>Beverages</span>
-            </a>
-          </li>
-          <div class="mt-16">
-            <span class="px-3 text-gray-500">Other</span>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-                <i class="fas fa-redo-alt mr-2"></i>
-                <span>My Orders</span>
-              </a>
-            </li>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-                <i class="fas fa-sliders-h mr-2"></i>
-                <span>Settings</span>
-              </a>
-            </li>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="#">
-                <i class="fas fa-user-alt mr-2"></i>
-                <span>Profile</span>
-              </a>
-            </li>
-          </div>
-        </ul>
-      </nav>
-    </div>
-    <!--nav end-->
-    <main class="md:col-span-4">
-      <div class="flex justify-center md:justify-end">
-        <a href="#" class="rounded-full bg-gray-200 py-2 px-6 mr-auto"><i class="fas fa-long-arrow-alt-left"></i></a>
-        <a href="#" class="font-bold rounded-full bg-yellow-300 py-2 px-3">login</a>
-        <a href="#" class="font-bold rounded-full bg-gray-300 py-2 px-3 ml-2">signup</a>
-      </div>
-
-      <div class="mt-16">
-        <div><span class="font-bold text-2xl md:text-4xl">Ninja Burgers</span><img src="images/hamburger.svg"
-            class="h-6 w-6 md:h-8 md:w-8 mb-3 ml-2 md:ml-5 inline-flex"></div>
-
-        <div class="mt-5 grid lg:grid-cols-3 sm:grid-cols-2 gap-16">
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
+        <div class="grid grid-cols-1 lg:grid-cols-12">
+            <div class="lg:col-span-7 lg:ml-48 mt-12 lg:mt-32 text-center lg:text-left">
+                <span class="font-bold text-hero">
+                    Ninja food
+                </span>
+                <span class="font-bold text-6xl block ml-48 hidden xl:block">
+                    your choice
+                </span>
             </div>
-          </div>
-          <!--card end-->
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
+            <div class="col-span-5 lg:mt-40 hidden md:block">
+                <img src="images/pizza-hero.png" class="h-64 mx-auto lg:mx-0">
             </div>
-          </div>
-          <!--card end-->
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
-            </div>
-          </div>
-          <!--card end-->
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
-            </div>
-          </div>
-          <!--card end-->
-
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-yellow-500 mt-10 font-bold text-3xl">$ 3.50</span>
-            </div>
-          </div>
-          <!--card end-->
-
         </div>
-
-      </div>
-
-
-    </main>
-    <aside
-      class="transform top-0 right-0 w-full md:w-1/3 shadow-2xl bg-white fixed h-full overflow-auto ease-in-out transition-all duration-300 z-30 translate-x-full"
-      id="side-panel">
-      <div class="p-8">
-        <button class="bg-gray-200 py-2 px-6 rounded-full" id="close-side-panel"><i class="fas fa-times"></i></button>
-        <main class="text-center">
-          <img src="images/burger.png" alt="burger" class="w-56 mx-auto mt-16 mb-8">
-          <span class="font-bold text-3xl">Bacon jammer</span>
-          <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-          <span class="block text-yellow-500 mt-6 font-bold text-3xl">$ 3.50</span>
-          <span class="block mt-8">
-            <input type="text" class="rounded-lg bg-gray-200 p-2" placeholder="add a note..">
-          </span>
-          <button class="rounded-lg bg-yellow-400 px-4 py-2 font-bold mt-6">Add to Order</button>
-        </main>
-      </div>
-    </aside>
-  </div>
-  <!--wrapper end-->
-
-  <script src=" index.js"></script>
+    </div>
+    <!--hero end-->
+    <!--main start-->
+    <div class="p-32" id="order">
+        <div class="font-bold text-center text-5xl">
+            What's the mood?
+        </div>
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 mt-12 font-bold text-center items-center text-lg">
+            <a href="items-4.html" class="my-3">
+                <div class="bg-custom-yellow rounded-full py-6 w-4/5 md:w-1/3 mx-auto">
+                    <span class="bg-white p-4 rounded-full text-center"><i class="fas fa-carrot"></i></span>
+                    <span class="block mt-5">Salad</span>
+                </div>
+            </a>
+            <a href="items-1.html" class="my-3">
+                <div class="bg-custom-yellow rounded-full py-6 w-4/5 md:w-1/3 mx-auto">
+                    <span class="bg-white p-4 rounded-full"><i class="fas fa-hamburger"></i></span>
+                    <span class="block mt-5">Burger</span>
+                </div>
+            </a>
+            <a href="items-3.html" class="my-3">
+                <div class="bg-custom-yellow rounded-full py-6 w-4/5 md:w-1/3 mx-auto">
+                    <span class="bg-white p-4 rounded-full"><i class="fas fa-pizza-slice"></i></span>
+                    <span class="block mt-5">Pizza</span>
+                </div>
+            </a>
+            <a href="items-2.html" class="my-3">
+                <div class="bg-custom-yellow rounded-full py-6 w-4/5 md:w-1/3 mx-auto">
+                    <span class="bg-white p-4 rounded-full"><i class="fas fa-cocktail"></i></span>
+                    <span class="block mt-5">Drinks</span>
+                </div>
+            </a>
+            <a href="items-1.html" class="my-3">
+                <div class="bg-custom-yellow rounded-full py-6 w-4/5 md:w-1/3 mx-auto">
+                    <span class="bg-white p-4 rounded-full"><i class="fas fa-ice-cream"></i></span>
+                    <span class="block mt-5">Dessert</span>
+                </div>
+            </a>
+        </div>
+    </div>
+    <!--main end-->
+    <!--contact start-->
+    <div class="bottom-0 left-0 right-0 bg-custom-yellow py-20 text-center" id="contact">
+        <span class="mt-12 font-bold text-5xl">Drop us a line</span>
+        <form class="mt-10 w-1/2 mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+                <input type="text" class="rounded-lg bg-gray-200 p-2" placeholder="name">
+                <input type="text" class="rounded-lg bg-gray-200 p-2" placeholder="email">
+            </div>
+            <div class="mt-10">
+                <textarea class="rounded-lg bg-gray-200 p-2 w-full h-screen-25" placeholder="message"></textarea>
+            </div>
+            <div class="mt-6">
+                <button type="submit"
+                    class="text-white text-xl hover:shadow-lg rounded-lg bg-gray-800 px-5 py-2">Send</button>
+            </div>
+        </form>
+        <hr class="mt-20 bg-gray-200 w-2/3 mx-auto">
+        <div class="flex justify-center w-2/3 mx-auto">
+            <div class="font-bold mt-10 mr-auto">
+                <span class="mx-5">
+                    <a href="shortcodes.html">
+                        Shrotcodes
+                    </a>
+                </span>
+                <span class="mx-5">
+                    <a href="documentation.html">
+                        Documentation
+                    </a>
+                </span>
+                <span class="mx-5">
+                    <a href="https://github.com/panbak" target="_blank">
+                        Author
+                    </a>
+                </span>
+            </div>
+            <div class="font-bold mt-10 ml-auto">
+                &copy; Panos Bakas
+            </div>
+        </div>
+    </div>
+    <!--contact end-->
 </body>
 
 </html>
