--- a/public/items-1.html
+++ b/public/items-1.html
@@ -29,6 +29,12 @@
         </div>
         <ul class="hidden lg:block mr-10 mb-10" id="menu">
           <li class="my-3">
+            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="items-4.html">
+              <i class="fas fa-carrot mr-2"></i>
+              <span>Salads</span>
+            </a>
+          </li>
+          <li class="my-3">
             <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold bg-custom-yellow block" href="items-1.html">
               <i class="fas fa-hamburger mr-2"></i>
               <span>Burgers</span>
